<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BtnHelpPrev"
        android:fillViewport="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"></TextView>

    </ScrollView>

    <Button
        android:id="@+id/BtnHelpPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:onClick="BtnHelpPrevClickHandler"
        android:text="@string/Prev"></Button>

    <Button
        android:id="@+id/BtnHelpDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="BtnHelpDoneHandler"
        android:text="@string/Menu_Exit"></Button>


</RelativeLayout>
