<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_note_title"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="clip_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/new_note_text"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:hint="Enter reminder here"
        android:layout_margin="10dip" />



    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_note_priority_spinner"
        android:layout_below="@+id/new_note_text"
        android:layout_alignStart="@+id/new_note_text"
        android:layout_marginStart="44dp"
        android:layout_margin="10dip" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_note_done_btn"
            android:text="@string/Menu_Done"
            android:layout_weight="1"
            android:layout_gravity="left"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Menu_Cancel"
            android:id="@+id/new_note_cancel_btn"
            android:layout_weight="1"
            android:layout_gravity="right"
            />
    </LinearLayout>
</RelativeLayout>